--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Content Include="Default.aspx" />
     <Content Include="Scripts\angular.min.js" />
+    <Content Include="Todo.aspx" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -70,6 +71,13 @@
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Todo.aspx.cs">
+      <DependentUpon>Todo.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Todo.aspx.designer.cs">
+      <DependentUpon>Todo.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
