--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -52,6 +52,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Default.aspx" />
+    <Content Include="Phones2FilteringRepeaters.aspx" />
+    <Content Include="Phones1Template.aspx" />
     <Content Include="Scripts\angular.min.js" />
     <Content Include="Todo.aspx" />
     <Content Include="Web.config" />
@@ -69,6 +71,20 @@
     </Compile>
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Phones2FilteringRepeaters.aspx.cs">
+      <DependentUpon>Phones2FilteringRepeaters.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Phones2FilteringRepeaters.aspx.designer.cs">
+      <DependentUpon>Phones2FilteringRepeaters.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Phones1Template.aspx.cs">
+      <DependentUpon>Phones1Template.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Phones1Template.aspx.designer.cs">
+      <DependentUpon>Phones1Template.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Todo.aspx.cs">
