--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -52,8 +52,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Default.aspx" />
+    <Content Include="Images\img.jpg" />
     <Content Include="Phones2FilteringRepeaters.aspx" />
     <Content Include="Phones1Template.aspx" />
+    <Content Include="Phones3OrderBy.aspx" />
+    <Content Include="Phones4JSON.aspx" />
+    <Content Include="Phones5LinksAndImages.aspx" />
     <Content Include="Scripts\angular.min.js" />
     <Content Include="Todo.aspx" />
     <Content Include="Web.config" />
@@ -72,6 +76,9 @@
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Phone.ashx.cs">
+      <DependentUpon>Phone.ashx</DependentUpon>
+    </Compile>
     <Compile Include="Phones2FilteringRepeaters.aspx.cs">
       <DependentUpon>Phones2FilteringRepeaters.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -86,6 +93,27 @@
     <Compile Include="Phones1Template.aspx.designer.cs">
       <DependentUpon>Phones1Template.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Phones3OrderBy.aspx.cs">
+      <DependentUpon>Phones3OrderBy.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Phones3OrderBy.aspx.designer.cs">
+      <DependentUpon>Phones3OrderBy.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Phones4JSON.aspx.cs">
+      <DependentUpon>Phones4JSON.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Phones4JSON.aspx.designer.cs">
+      <DependentUpon>Phones4JSON.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Phones5LinksAndImages.aspx.cs">
+      <DependentUpon>Phones5LinksAndImages.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Phones5LinksAndImages.aspx.designer.cs">
+      <DependentUpon>Phones5LinksAndImages.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Todo.aspx.cs">
       <DependentUpon>Todo.aspx</DependentUpon>
@@ -95,6 +123,10 @@
       <DependentUpon>Todo.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Phone.ashx" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
   <ProjectExtensions>
