--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -61,6 +61,9 @@
     <Content Include="Phones6-Detail.aspx" />
     <Content Include="Phones6-List.aspx" />
     <Content Include="Phones6RoutingAndViews.aspx" />
+    <Content Include="Phones7Event.aspx" />
+    <Content Include="Phones8Rest.aspx" />
+    <Content Include="Scripts\angular-resource.min.js" />
     <Content Include="Scripts\angular.min.js" />
     <Content Include="Scripts\json2.js" />
     <Content Include="Todo.aspx" />
@@ -138,6 +141,20 @@
     </Compile>
     <Compile Include="Phones6RoutingAndViews.aspx.designer.cs">
       <DependentUpon>Phones6RoutingAndViews.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Phones7Event.aspx.cs">
+      <DependentUpon>Phones7Event.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Phones7Event.aspx.designer.cs">
+      <DependentUpon>Phones7Event.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Phones8Rest.aspx.cs">
+      <DependentUpon>Phones8Rest.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Phones8Rest.aspx.designer.cs">
+      <DependentUpon>Phones8Rest.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Todo.aspx.cs">
