--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -63,8 +63,10 @@
     <Content Include="Phones6RoutingAndViews.aspx" />
     <Content Include="Phones7Event.aspx" />
     <Content Include="Phones8Rest.aspx" />
+    <Content Include="ResizeDIV.aspx" />
     <Content Include="Scripts\angular-resource.min.js" />
     <Content Include="Scripts\angular.min.js" />
+    <Content Include="Scripts\jquery-1.10.2.min.js" />
     <Content Include="Scripts\json2.js" />
     <Content Include="Todo.aspx" />
     <Content Include="Web.config" />
@@ -157,6 +159,13 @@
       <DependentUpon>Phones8Rest.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResizeDIV.aspx.cs">
+      <DependentUpon>ResizeDIV.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ResizeDIV.aspx.designer.cs">
+      <DependentUpon>ResizeDIV.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Todo.aspx.cs">
       <DependentUpon>Todo.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -168,7 +177,9 @@
   <ItemGroup>
     <Content Include="Phone.ashx" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
   <ProjectExtensions>
