--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -52,7 +52,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Default.aspx" />
+    <Content Include="HideAndSeek.aspx" />
     <Content Include="Images\img.jpg" />
+    <Content Include="NgCloak.aspx" />
     <Content Include="Phones2FilteringRepeaters.aspx" />
     <Content Include="Phones1Template.aspx" />
     <Content Include="Phones3OrderBy.aspx" />
@@ -64,6 +66,7 @@
     <Content Include="Phones7Event.aspx" />
     <Content Include="Phones8Rest.aspx" />
     <Content Include="ResizeDIV.aspx" />
+    <Content Include="Scope.aspx" />
     <Content Include="Scripts\angular-resource.min.js" />
     <Content Include="Scripts\angular.min.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -84,6 +87,20 @@
     </Compile>
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="HideAndSeek.aspx.cs">
+      <DependentUpon>HideAndSeek.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="HideAndSeek.aspx.designer.cs">
+      <DependentUpon>HideAndSeek.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="NgCloak.aspx.cs">
+      <DependentUpon>NgCloak.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="NgCloak.aspx.designer.cs">
+      <DependentUpon>NgCloak.aspx</DependentUpon>
     </Compile>
     <Compile Include="Phone.ashx.cs">
       <DependentUpon>Phone.ashx</DependentUpon>
@@ -165,6 +182,13 @@
     </Compile>
     <Compile Include="ResizeDIV.aspx.designer.cs">
       <DependentUpon>ResizeDIV.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Scope.aspx.cs">
+      <DependentUpon>Scope.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Scope.aspx.designer.cs">
+      <DependentUpon>Scope.aspx</DependentUpon>
     </Compile>
     <Compile Include="Todo.aspx.cs">
       <DependentUpon>Todo.aspx</DependentUpon>
